# Legioncore_uwow

./: CMakeLists.txt
cmake/: showoptions.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
sql/base/: hotfixes_database.sql
sql/characters_legion/: 2016_03_13_character_artifact.sql  2016_03_13_character_transmogs.sql  2016_03_13_characters_characters.sql  2016_03_22_characters_honor.sql  characters_2015_03_11.sql
sql/hotfixes_updates/: upd13.sql  upd19.sql  upd5.sql  upd9.sql
sql/uwow/: 2015_12_15_00_world_garrison_building_horde.sql  2015_12_15_01_world_garrison_building_alliance.sql  2015_12_19_01_world_garrison_shipment.sql  2015_12_19_02_world_garrison_shipment.sql  2016_01_16_01_world_garrison_buildings_quests.sql  2016_02_13_01_character_garrison_buildings.sql  2016_02_20_01_world_garrison_tradeskill.sql  2016_02_28_character_garrison.sql  battlenet_components.sql
sql/world_legion/: 02_world_Eye_of_Azshara.sql  2016_03_10_01_world_instance_template.sql  2016_03_11_01_world_creature_template.sql  2016_03_12_01_world_character_tempaltes.sql  2016_03_12_01_world_conversation.sql  2016_03_12_01_world_npc_vendor.sql  2016_03_12_02_world_creature_template_locale.sql  2016_03_13_01_world_char_create_info.sql  2016_03_14_01_world_spawns_darkheart_thicket.sql  2016_03_14_02_world_darkheart_thicket.sql  2016_03_19_01_world_creature_classlevelstats.sql  2016_03_20_03_world_darkheart_thicket.sql  2016_03_21_01_world_vehicle_template_accessory.sql  2016_03_22_01_world_spawn_maw_of_souls.sql  2016_03_22_02_world_maw_of_souls.sql  2016_03_22_02_world_spells.sql  2016_03_23_01_world_creature_action.sql  2016_03_24_04_world_darkheart_thichet.sql  2016_03_26_01_world_creature_equip_template.sql  2016_03_27_01_world_quest_objectives.sql.sql  2016_04_01_01_world_display_choice.sql  2016_04_02_01_world_areatrigger_data.sql  2016_04_02_01_world_spawn_halls_of_valor.sql  2016_04_02_02_world_halls_of_valor.sql  2016_04_04_01_world_spell_area.sql  2016_04_04_03_world_maw_of_souls.sql  2016_04_07_01_world_creature_template.sql  2016_04_09_00_world_waypoint_data.sql  2016_04_09_01_world_Neltharion's_Lair_spawns.sql  2016_04_09_01_world_character_template_item.sql  2016_04_09_02_world_Neltharion's_Lair.sql  2016_04_10_01_world_sceneobject_data.sql  2016_04_10_02_world_creature_template.sql  2016_04_11_01_world_creature.sql  2016_04_12_01_world_quest_template.sql  2016_04_13_03_world_halls_of_valor.sql  2016_04_15_01_world_Black_Rook_Hold_spawns.sql  2016_04_15_02_world_Black_Rook_Hold.sql  2016_04_17_01_world_spell_visual.sql  2016_04_20_01_world_The_Arcway_spawn.sql  (+35 more)
src/server/bnetserver/Authentication/: AuthCodes.cpp
src/server/bnetserver/Packets/: AuthenticationPackets.h
src/server/bnetserver/Server/: Session.cpp
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h
src/server/game/Accounts/: AccountMgr.h  BattlenetAccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/BattlePay/: BattlePayMgr.cpp  BattlePayMgr.h
src/server/game/BattlePet/: BattlePetMgr.cpp  BattlePetMgr.h  PetBattle.cpp  PetBattle.h  PetBattleAbility.cpp  PetBattleAbility.h
src/server/game/Battlefield/: Battlefield.cpp  BattlefieldMgr.cpp
src/server/game/Battlegrounds/: Arena.cpp  Battleground.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp
src/server/game/Challenge/: ChallengeMgr.cpp
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h
src/server/newscripts/: CMakeLists.txt
src/server/newscripts/Legion/: CMakeLists.txt  mardum.cpp  warden_prison.cpp
src/server/newscripts/Legion/BlackRookHoldDungeon/: black_rook_hold_dungeon.h  boss_illysanna_ravencrest.cpp  boss_lord_kurtalos_ravencrest.cpp  boss_smashspite_the_hateful.cpp  boss_the_amalgam_of_souls.cpp  instance_black_rook_hold_dungeon.cpp
src/server/newscripts/Legion/DarkHeartThicket/: boss_arch_druid_glaidalis.cpp  boss_dresaron.cpp  boss_oakheart.cpp  boss_shade_of_xavius.cpp  darkheart_thicket.h  instance_darkheart_thicket.cpp
src/server/newscripts/Legion/EyeofAzshara/: boss_king_deepbeard.cpp  boss_lady_hatecoil.cpp  boss_serpentrix.cpp  boss_warlord_parjesh.cpp  boss_wrath_of_azshara.cpp  eye_of_azshara.h  instance_eye_of_azshara.cpp
src/server/newscripts/Legion/HallsofValor/: boss_fenryr.cpp  boss_god_king_skovald.cpp  boss_hymdall.cpp  boss_hyrja.cpp  boss_odyn.cpp  halls_of_valor.h  instance_halls_of_valor.cpp
src/server/newscripts/Legion/MawofSouls/: boss_harbaron.cpp  boss_helya.cpp  boss_ymiron_the_fallen_king.cpp  instance_maw_of_souls.cpp  maw_of_souls.h
src/server/newscripts/Legion/NeltharionsLair/: boss_dargrul_the_underking.cpp  boss_naraxas.cpp  boss_rokmora.cpp  boss_ularogg_cragshaper.cpp  instance_neltharions_lair.cpp  neltharions_lair.h
src/server/newscripts/Legion/TheArcway/: boss_advisor_vandros.cpp  boss_corstilax.cpp  boss_general_xakal.cpp  boss_ivanyr.cpp  boss_naltira.cpp  instance_the_arcway.cpp  the_arcway.h
src/server/newscripts/Legion/VaultoftheWardens/: boss_ashgolm.cpp  boss_cordana.cpp  boss_glazer.cpp  boss_inquisitor_tormentorum.cpp  boss_tirathon_saltheril.cpp  instance_vault_of_the_wardens.cpp  vault_of_the_wardens.h
src/server/newscripts/Legion/VioletHoldLegion/: boss_anubesset.cpp  boss_blood_princess_thalena.cpp  boss_festerface.cpp  boss_millificent_manastorm.cpp  boss_mindflayer_kaahrj.cpp  boss_saelorn.cpp  boss_shivermaw.cpp  instance_violet_hold_legion.cpp  violet_hold_legion.h
src/server/scripts/: CMakeLists.txt
src/server/shared/: Common.cpp  Common.h  Containers.h  Define.h
src/server/worldserver/: CMakeLists.txt  worldserver.conf.dist
src/tools/map_extractor/: CMakeLists.txt  System.cpp  dbcfile.cpp  dbcfile.h  loadlib.cpp
src/tools/mmaps_generator/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  vmapexport.cpp  wdtfile.cpp  wmo.cpp
(+644 files in other folders)
